# NexaToolKit

./: .gitignore  Backend.py  COMMERCIALIZATION.md  DOC.md  Dockerfile  HOW_IT_WORKS.md  HOW_TO_USE.md  LICENSE  Main.go  README.md  SECURITY.md  docker-compose.yml  example.sh  go.mod  go.sum  index.html  install.sh  launch.sh  makefile  package-lock.json  package.json  pyproject.toml  requirements.txt  splash.go
.github/: deploy.yml
nginx/: Dockerfile  nginx.conf
